Fix gap on bottom of game screen

--- a/styles/game.css
+++ b/styles/game.css
@@ -14,11 +14,6 @@
   padding: 0;
 }
 
-.container.game-active {
-  display: flex;
-  flex-direction: column;
-}
-
 #game-board-wrapper {
     background-color: #d8c7ec;
 }
@@ -45,19 +40,14 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100dvh;
+  min-height: 100dvh;
   min-height: 100dvh;
   margin: 0;
   padding: 0;
   gap: 0;
   overflow: hidden;
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #f3f3fa;
-  animation: none;
+  background-color: #d8c7ec;
 }
 
 /* Hide home elements when game is active */
